--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+B_TeamProject/Temp/UnityLockfile
+B_TeamProject/Library/shadercompiler-UnityShaderCompiler.exe3.log
+B_TeamProject/Library/shadercompiler-UnityShaderCompiler.exe2.log
+B_TeamProject/Library/shadercompiler-UnityShaderCompiler.exe1.log
+B_TeamProject/Library/shadercompiler-UnityShaderCompiler.exe0.log
+B_TeamProject/Assets/Plugins/x86_64/mrs.dll
